--- a/package.json
+++ b/package.json
@@ -66,10 +66,11 @@
     "parse-gitignore": "^2.0.0"
   },
   "devDependencies": {
-    "@iz7n/eslint-config": "workspace:*",
     "@antfu/ni": "^0.23.0",
     "@eslint-react/eslint-plugin": "^1.14.2",
     "@eslint/config-inspector": "^0.5.4",
+    "@iz7n/eslint-config": "workspace:*",
+    "@iz7n/prettier-config": "^1.3.0",
     "@types/node": "^22.5.5",
     "bumpp": "^9.5.2",
     "eslint": "^9.10.0",
@@ -87,5 +88,6 @@
     "@typescript-eslint/utils": "^8.6.0",
     "eslint": "^9.10.0",
     "tsx": "^4.19.1"
-  }
+  },
+  "prettier": "@iz7n/prettier-config"
 }
