--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@iz7n/eslint-config",
+  "name": "@in5net/eslint-config",
   "type": "module",
   "version": "0.10.1",
   "packageManager": "pnpm@9.11.0",
-  "description": "iz7n's ESLint config",
+  "description": "in5net's ESLint config",
   "license": "MIT",
   "exports": {
     ".": {
@@ -69,8 +69,8 @@
     "@antfu/ni": "^0.23.0",
     "@eslint-react/eslint-plugin": "^1.14.2",
     "@eslint/config-inspector": "^0.5.4",
-    "@iz7n/eslint-config": "workspace:*",
-    "@iz7n/prettier-config": "^1.3.0",
+    "@in5net/eslint-config": "workspace:*",
+    "@in5net/prettier-config": "^1.3.0",
     "@types/node": "^22.5.5",
     "bumpp": "^9.5.2",
     "eslint": "^9.10.0",
@@ -89,5 +89,5 @@
     "eslint": "^9.10.0",
     "tsx": "^4.19.1"
   },
-  "prettier": "@iz7n/prettier-config"
+  "prettier": "@in5net/prettier-config"
 }
