--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "packageManager": "pnpm@9.11.0",
   "description": "in5net's ESLint config",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.js",
