--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint": "^9.11.1",
     "eslint-plugin-svelte": "^2.44.0",
     "eslint-typegen": "^0.3.2",
+    "jiti": "^2.0.0",
     "esno": "^4.7.0",
     "svelte": "^4.2.19",
     "svelte-eslint-parser": "^0.41.1",
