--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@in5net/eslint-config",
   "type": "module",
   "version": "0.11.0",
-  "packageManager": "pnpm@9.11.0",
+  "packageManager": "pnpm@9.12.0",
   "description": "in5net's ESLint config",
   "license": "MIT",
   "publishConfig": {
@@ -22,7 +22,7 @@
   "scripts": {
     "build": "nr typegen && tsup --format esm,cjs --clean --dts",
     "stub": "tsup --format esm",
-    "dev": "npx @eslint/config-inspector --config eslint.config.ts",
+    "dev": "npx @eslint/config-inspector --config eslint.config.js",
     "build:inspector": "pnpm build && npx @eslint/config-inspector build",
     "watch": "tsup --format esm,cjs --watch",
     "lint": "eslint --flag unstable_ts_config .",
@@ -48,39 +48,39 @@
     "@antfu/install-pkg": "^0.4.1",
     "@clack/prompts": "^0.7.0",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.0",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "@typescript-eslint/parser": "^8.7.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "eslint-config-flat-gitignore": "^0.3.0",
     "eslint-flat-config-utils": "^0.4.0",
     "eslint-merge-processors": "^0.1.0",
     "eslint-plugin-antfu": "^2.7.0",
     "eslint-plugin-command": "^0.2.6",
-    "eslint-plugin-import-x": "^4.3.0",
-    "eslint-plugin-jsdoc": "^50.3.0",
+    "eslint-plugin-import-x": "^4.3.1",
+    "eslint-plugin-jsdoc": "^50.3.1",
     "eslint-plugin-jsonc": "^2.16.0",
     "eslint-plugin-n": "^17.10.3",
-    "eslint-plugin-perfectionist": "^3.7.0",
+    "eslint-plugin-perfectionist": "^3.8.0",
     "eslint-plugin-regexp": "^2.6.0",
-    "eslint-plugin-unicorn": "^55.0.0",
+    "eslint-plugin-unicorn": "^56.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "globals": "^15.9.0",
+    "globals": "^15.10.0",
     "jsonc-eslint-parser": "^2.4.0",
     "local-pkg": "^0.5.0",
     "parse-gitignore": "^2.0.0"
   },
   "devDependencies": {
     "@antfu/ni": "^0.23.0",
-    "@eslint-react/eslint-plugin": "^1.14.2",
+    "@eslint-react/eslint-plugin": "^1.14.3",
     "@eslint/config-inspector": "^0.5.4",
     "@in5net/eslint-config": "workspace:*",
     "@in5net/prettier-config": "^1.3.0",
-    "@types/node": "^22.7.3",
-    "bumpp": "^9.5.2",
-    "eslint": "^9.11.1",
-    "eslint-plugin-svelte": "^2.44.0",
+    "@types/node": "^22.7.4",
+    "bumpp": "^9.6.1",
+    "eslint": "^9.12.0",
+    "eslint-plugin-svelte": "^2.44.1",
     "eslint-typegen": "^0.3.2",
-    "jiti": "^2.0.0",
-    "esno": "^4.7.0",
+    "jiti": "^2.3.1",
+    "esno": "^4.8.0",
     "svelte": "^4.2.19",
     "svelte-eslint-parser": "^0.41.1",
     "tsup": "^8.3.0",
