--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "@in5net/eslint-config",
+    "name": "@iz7n/eslint-config",
     "type": "module",
     "version": "0.12.1",
     "packageManager": "pnpm@9.13.2",
-    "description": "in5net's ESLint config",
+    "description": "iz7n's ESLint config",
     "license": "MIT",
     "publishConfig": {
         "access": "public"
@@ -19,7 +19,7 @@
     "files": [
         "dist"
     ],
-    "prettier": "@in5net/prettier-config",
+    "prettier": "@iz7n/prettier-config",
     "scripts": {
         "build": "nr typegen && tsup --format esm,cjs --clean --dts",
         "stub": "tsup --format esm",
@@ -72,8 +72,8 @@
     "devDependencies": {
         "@antfu/ni": "^0.23.1",
         "@eslint/config-inspector": "^0.5.4",
-        "@in5net/eslint-config": "workspace:*",
-        "@in5net/prettier-config": "^1.3.0",
+        "@iz7n/eslint-config": "workspace:*",
+        "@iz7n/prettier-config": "^1.4.0",
         "@types/node": "^22.9.0",
         "bumpp": "^9.8.1",
         "eslint": "^9.15.0",
