--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.15.0",
   "packageManager": "pnpm@10.0.0",
-  "description": "prismancy's ESLint config",
+  "description": "in5net's ESLint config",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
