--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.16.0",
   "packageManager": "pnpm@10.0.0",
-  "description": "in5net's ESLint config",
+  "description": "ESLint config",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
@@ -67,11 +67,11 @@
     "parse-gitignore": "^2.0.0"
   },
   "devDependencies": {
+    "@in5net/eslint-config": "workspace:*",
     "@antfu/ni": "^23.3.1",
     "@eslint/config-inspector": "^1.0.0",
-    "@types/node": "^22.13.0",
-    "@in5net/eslint-config": "workspace:*",
     "@in5net/prettier-config": "^1.0.0",
+    "@types/node": "^22.13.0",
     "bumpp": "^10.0.1",
     "eslint": "^9.19.0",
     "eslint-plugin-svelte": "^2.46.1",
